# CosmosEngine

./: .gitignore  CMakeLists.txt  structure.txt
assets/shaders/: light_cube.frag  lighting.frag  lighting.vert  skybox.vert
src/: main.cpp
src/engine/core/: InputManager.cpp  InputManager.h
src/engine/graphics/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Sphere.cpp  Sphere.h  TextureLoader.cpp  TextureLoader.h
src/engine/ui/: TextRenderer.cpp  TextRenderer.h  UIManager.cpp  UIManager.h
src/game/: CommandModule.cpp  CommandModule.h
